# tsetmc

./: .gitattributes  .gitmodules  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  r3l3453.json  setup.cfg  setup.py
.github/workflows/: pytest.yml
dev/: .ipython.py  InstHistoryInfo.js  InstInfo.js  README.rst  add_id_to_ids.py  dataset_cleanup.py  db_cleanup.py  generate_ids.py  page_vars_regex_generator.py  typeddict.py  update_ids_using_market_watch.py
dev/dataset/: add_isin_column.py  cleanup.py  update_by_market_watch.py
dev/docs/: BestLimitsAllIns.html  IndexB1LastDayOneInst.html  Instrument.html  Instrument_service.html  InstrumentsState.html  cs_table.html
dev/tsetmc_source_files/: InstInfo.js  README.rst  market_watch.html  market_watch.js  market_watch_plus.js  market_watch_script.html  sectors.js
sample_scripts/: number_of_companies_in_indecies.py
test/: __init__.py  conftest.py  test_core.py  test_database.py  test_dataset.py  test_docs.py  test_general.py  test_indices.py  test_instrument_on_date.py  test_instruments.py  test_market_watch.py  test_tsetmc.py
test/data/: InstValue.aspx  asam.txt  dara_yekom.txt  fmelli_trade_history_top2.txt  vsadid.txt  vskhooz_long_response.txt  vskhooz_short_response.txt
test/testdata/: MarketWatchInit.aspx  MarketWatchInit2.aspx  MarketWatchPlus00.txt  MarketWatchPlus_h64130_r9540883525.txt  adjustments_flow_7.html  ava_holder.txt  ava_holders.json  ava_holders.txt  ava_share_holder_history.json  boards.html  client_type.html  client_type_karis.json  dey.html  empty_ombud_messages.html  faraz_GetClosingPriceHistory_20220222.json  faraz_GetInstrumentState_20220222.json  faraz_Shareholder_20220222.json  fmelli.html  fmelli.txt  fmelli_20210602_intraday.html  fmelli_dps.txt  fmelli_introduction.html  fmelli_publisher.json  fzar_GetClientTypeHistory_all.json  index_companies.json  index_history.json  index_info.json  industrial_groups_overview.html  instrument.html  instrument_filter_by_date.html  instrument_state.html  kala.html  karis_codal.json  karis_trades.json  khgostar.html  last_state.json  major_holders_activity.html  market_overview.json  negin.txt  ombud_messages.html  (+12 more)
tests/: __init__.py  conftest.py  test_dataset.py  test_docs.py  test_funds.py  test_general.py  test_indices.py  test_instrument_live_data.py  test_instrument_on_date.py  test_instruments.py  test_insturments_page_data.py  test_market_watch.py
tests/testdata/: ClientTypeAll.aspx  ClosingPriceAll.aspx  MarketWatchInit.aspx  MarketWatchPlus00.txt  MarketWatchPlus_2025-07-09.txt  agas_details.json  ava_holder.txt  ava_holders.json  ava_holders2.txt  ava_share_holder_history.json  best_limits.json  best_limits_all_ins.html  best_limits_all_ins.json  client_type.json  closing_price_info_karis.json  commodity_funds.json  cs_codes.html  daily_closing_price_karis.json  dara_yekom.txt  empty_eps_in_mwp.txt  etf_karis.json  etfs.json  faraz_BestLimits_20220222.json  faraz_GetClosingPriceDaily_20220222.json  faraz_GetInstrumentHistory_20220222.json  faraz_GetStaticThreshold_20220222.json  faraz_GetTradeHistory_20220222.json  faraz_Shareholder_20220222.json  fmelli.html  fmelli.txt  fmelli_codal.json  fmelli_info.json  fmelli_price_adjustment.html  get_client_type_all.json  get_funds_mix.json  get_market_watch_0.json  index_companies.json  index_info.json  index_last_day_history.json  instrument.json  (+25 more)
tsetmc/: MANIFEST.in  __init__.py  _core.py  _tsetmc.py  docs.py  funds.py  general.py  ids.json  indices.py  instruments.py  market_watch.py
tsetmc/database/: __init__.py  _core.py  _database.py  ids.json
tsetmc/dataset/: __init__.py  dataset.csv  ids.json
