[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'tsetmc'
authors = [
    { name = '5j9', email = '5j9@users.noreply.github.com' },
]
description = 'a library to retrieve data from tsetmc.com website'
keywords = [
    'tsetmc',
    'client',
]
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12'
dynamic = [
    'version',
]
dependencies = [
    'aiohutils >= 0.15.0',
    'beautifulsoup4',
    'jdatetime',
    'lxml',
    'numpy',
    'pandas >= 2.1.0',
    'pyarrow',  # pd.options.future.infer_string = True
]
[project.optional-dependencies]
test = [
    'aiohutils[test] >= 0.15.0',
]

[project.license]
text = 'GNU General Public License v3 (GPLv3)'

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[project.urls]
Homepage = 'https://github.com/5j9/tsetmc'

[tool.flit.sdist]
exclude = ['tests', 'dev', '.gitattributes', 'sample_scripts']

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'I',  # isort
    'UP',  # pyupgrade
]
lint.ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
    'E721',  # Do not compare types, use `isinstance()`
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'


[tool.pyright]
typeCheckingMode = 'standard'
reportDeprecated = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = true
