[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'

[project]
name = 'tsetmc'
version = "3.0.0"
authors = [
    { name = '5j9', email = '5j9@users.noreply.github.com' },
]
description = 'a library to retrieve data from tsetmc.com website'
keywords = [
    'tsetmc',
    'client',
]
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.13'
dependencies = [
    'aiohutils >= 0.22.4',
    'jdatetime',
    'lxml',
    'numpy',
    'pandas >= 3.0.0',
    # pd.options.future.infer_string = True
    'pyarrow',
]

[project.license]
text = 'GNU General Public License v3 (GPLv3)'

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[project.urls]
Homepage = 'https://github.com/5j9/tsetmc'

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
    'RUF', # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',  # Do not compare types, use `isinstance()`
    'RUF001',  # ambiguous-unicode-character-string
    'RUF002',  # ambiguous-unicode-character-docstring
    'RUF003',  # ambiguous-unicode-character-comment
    'RUF012',  # mutable-class-default
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
asyncio_default_test_loop_scope = 'session'

[tool.pyright]
typeCheckingMode = 'standard'
reportDeprecated = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = true
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryComparison = 'warning'
venvPath = "."
venv = ".venv"

[tool.uv.build-backend]
module-name = "tsetmc"
module-root = ""
[dependency-groups]
dev = [
    "pytest-aiohutils>=0.22.5",
]
