[metadata]
name = tsetmc
version = attr: tsetmc.__version__
author = 5j9
author_email = 5j9@users.noreply.github.com
license = GNU General Public License v3 (GPLv3)
description = a library to retrieve data from tsetmc.com website
keywords = tsetmc, client
url = https://github.com/5j9/tsetmc
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Topic :: Internet

[options]
packages = find:
zip_safe = False
install_requires = requests; jdatetime; pandas>=1.3; numpy
python_requires = >=3.10
tests_require = pytest

[options.package_data]
tsetmc = database/ids.json
